-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 250401) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][devT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO);
		       an even number means stable while odd marks 
		       development releases
  Z = revision       - small changes to major.minor version (optional)
		
  devT = dev-release - development releases leading to the next stable
		       version

-----------------------------------------------------------------------

Last officially released version is -*> v1.8.2r14 <*-

??042001 (v1.9dev7)
	- added: -klg - a generic linear envelope; a controller source
		 that can be used to map custom envelopes to chain 
		 operator parameters [artham]
24042001 (v1.9dev6)
	- added: eiam - cs-setpos, cs-set-position; aliases for setpos
	- added: eiam - cs-getpos, cs-get-position; aliases for getpos
	- added: eiam - cs-rewind and cs-forward; aliases for rewind 
		 and forward
	- added: eiam - cs-get-length; alias for get-length
	- added: ecatools - repeated ctrl-c causes ecaplay to exit
		 immediately (like mpg123)
	- added: MIDI options now properly saved to ecs files
	- added: eiam - c-index-select, c-iselect, cs-iselect,
		 cs-list, ai-list, ao-list, ai-iselect, ao-iselect
	- added: eiam - cop-index-select, cop-iselect as aliases for
		 cop-select
	- added: eiam - copp-index-select, copp-iselect as aliases for
		 copp-select
	- added: eiam - ctrl-index-select, ctrl-iselect as aliases for
		 ctrl-select
	- added: eiam - ai-get-format and ao-get-format
	- added: eiam - cop-selected, copp-selected and ctrl-selected
	- added: eiam - cop-list, copp-list, ctrl-list
	- removed: because of the continuing licensing problems,
		   ladspa.h was removed; to compile ecasound with 