@@ -1,6 +1,7 @@
 // ------------------------------------------------------------------------
 // preset.cpp: Class for representing effect presets
-// Copyright (C) 2000 Kai Vehmanen (kaiv@wakkanet.fi)
+// Copyright (C) 2000,2001 Kai Vehmanen (kaiv@wakkanet.fi)
+// Copyright (C) 2001 Arto Hamara (artham@utu.fi)
 //
 // This program is free software; you can redistribute it and/or modify
 // it under the terms of the GNU General Public License as published by
@@ -157,11 +158,18 @@ string PRESET::parameter_names(void) const {
 }
 
 void PRESET::set_parameter(int param, CHAIN_OPERATOR::parameter_type value) {
+  if (param >= 0 && param < param_objects.size()) {
+    assert(param_objects.size() == param_arg_indices.size());
     param_objects[param-1]->set_parameter(param_arg_indices[param-1], value);
+  }
 }
 
 CHAIN_OPERATOR::parameter_type PRESET::get_parameter(int param) const { 
+  if (param >= 0 && param < param_objects.size()) {
+    assert(param_objects.size() == param_arg_indices.size());
     return param_objects[param-1]->get_parameter(param_arg_indices[param-1]);
+  }
+  return(0.0f);
 }
 
 void PRESET::init(SAMPLE_BUFFER *insample) {  
